workDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpserver
  name: httpserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
      labels:
        app: httpserver
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: httpserver
        image: wuyongmax/httpservermetrics
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "300m"
          limits:
            memory: "512Mi"
            cpu: "500m"

        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh","-c","sleep 4"]
          preStop:
            exec:
              command: ["/bin/sh","-c","sleep 30"]
