default-http-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend 
  namespace: cloudnative 
spec:
  type: ClusterIP 
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
