service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver
spec:
  selector:
    app: httpserver
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
