ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:  
  name: httpserver1
spec:
  ingressClassName: nginx
  rules:    
    - host: httpserver1.com 
      http:        
        paths:
          - backend:        
              service: 
                name: httpserver
                port:
                  number: 80  
            path: /  
            pathType: Prefix
